[IMP] Dropdown styling - fixed long text overflow

--- a/app/assets/stylesheets/briarcliff/_dropdown.scss
+++ b/app/assets/stylesheets/briarcliff/_dropdown.scss
@@ -90,18 +90,23 @@
   .link{
     position: relative;
 
+    span.icon-left {
+      padding-left: 1.5em;
+      display: block;
+      margin: 0;
+      margin-top: -1em;
+    }
+
     img {
-      position: absolute;
-      left: 0;
-      top: 0;
-      height: 1.6em;
-      margin: 0.3em 0.4em;
+      height: 1.5em;
+      position: relative;
+      left: -0.3em;
+      margin: 0em 0 -0.6em 0;
       border-radius: 999px;
+      top: -0.2em;
 
       & + span {
-        position: relative;
-        left: 1.4em;
-        margin-right: 1.4em;
+
       }
     }
   }
